Fix nav close button color on mobile

--- a/theme/scss/site/nav.scss
+++ b/theme/scss/site/nav.scss
@@ -37,13 +37,19 @@
 	margin-bottom: 5px !important;
 }
 
-.wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content .wp-block-navigation__container {
-	a, span {
+.wp-block-navigation__responsive-container.is-menu-open {
+	.wp-block-navigation__responsive-container-close {
 		color: #333333 !important;
 	}
 
-	.wp-block-navigation__submenu-container, .wp-block-navigation-item {
-		padding-top: 1rem !important;
-		padding-bottom: 0;
+	.wp-block-navigation__responsive-container-content .wp-block-navigation__container {
+		a, span {
+			color: #333333 !important;
+		}
+
+		.wp-block-navigation__submenu-container, .wp-block-navigation-item {
+			padding-top: 1rem !important;
+			padding-bottom: 0;
+		}
 	}
 }
